tests/programs/errors/variadic_type_mismatch.flow
fn sum(..vals:int):int {
    return 0
}

fn main():int {
    sum(1, "hello", 3)
    return 0
}
